; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_trailer.c_extract_trailer_block.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_trailer.c_extract_trailer_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64*)* @extract_trailer_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @extract_trailer_block(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i64 @find_patch_start(i8* %11)
  store i64 %12, i64* %6, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i64 @find_trailer_end(i8* %13, i64 %14)
  store i64 %15, i64* %7, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i64 @find_trailer_start(i8* %16, i64 %17)
  store i64 %18, i64* %8, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i64, i64* %8, align 8
  %21 = sub i64 %19, %20
  store i64 %21, i64* %9, align 8
  %22 = load i64, i64* %9, align 8
  %23 = add i64 %22, 1
  %24 = call i8* @git__malloc(i64 %23)
  store i8* %24, i8** %10, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = icmp eq i8* %25, null
  br i1 %26, label %27, label %28

27:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %41

28:                                               ; preds = %2
  %29 = load i8*, i8** %10, align 8
  %30 = load i8*, i8** %4, align 8
  %31 = load i64, i64* %8, align 8
  %32 = getelementptr inbounds i8, i8* %30, i64 %31
  %33 = load i64, i64* %9, align 8
  %34 = call i32 @memcpy(i8* %29, i8* %32, i64 %33)
  %35 = load i8*, i8** %10, align 8
  %36 = load i64, i64* %9, align 8
  %37 = getelementptr inbounds i8, i8* %35, i64 %36
  store i8 0, i8* %37, align 1
  %38 = load i64, i64* %9, align 8
  %39 = load i64*, i64** %5, align 8
  store i64 %38, i64* %39, align 8
  %40 = load i8*, i8** %10, align 8
  store i8* %40, i8** %3, align 8
  br label %41

41:                                               ; preds = %28, %27
  %42 = load i8*, i8** %3, align 8
  ret i8* %42
}

declare dso_local i64 @find_patch_start(i8*) #1

declare dso_local i64 @find_trailer_end(i8*, i64) #1

declare dso_local i64 @find_trailer_start(i8*, i64) #1

declare dso_local i8* @git__malloc(i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
